tests/sumo/devices/rerouting/personTrip/errors/flow_without_end/options.sumo
--net-file=net.net.xml 
--additional input_additional.add.xml
--route-files=input_routes.rou.xml
